--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.0/dist/phaser.js"></script>
 
     <script src="env.js"></script>
+    <script type="module" src="scripts/authform.js"></script>
 
     <!-- Include Firebase logic -->
     <script type="module" src="scripts/firebase.js"></script>
