Welle will settle

--- a/index.html
+++ b/index.html
@@ -2,24 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KarokaGame</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <h1>Welcome to KarokaGame!</h1>
+    <!-- Animated Clouds -->
+    <div id="clouds"></div>
 
-    <!-- Include Phaser -->
+    <!-- Waving Grass -->
+    <div id="grass"></div>
+
+    <!-- Game Canvas -->
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.0/dist/phaser.js"></script>
-
     <script src="env.js"></script>
     <script type="module" src="scripts/authform.js"></script>
-
-    <!-- Include Firebase logic -->
     <script type="module" src="scripts/firebase.js"></script>
-
-    <!-- Include Game logic -->
     <script type="module" src="scripts/game.js"></script>
 </body>
 </html>
