--- a/public/index.html
+++ b/public/index.html
@@ -5,19 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KarokaGame</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <!-- Animated Clouds -->
-    <div id="clouds"></div>
 
-    <!-- Waving Grass -->
-    <div id="grass"></div>
-
-    <!-- Game Canvas -->
+    <!-- Game Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.0/dist/phaser.js"></script>
-    <script src="env.js"></script>
-    <script type="module" src="scripts/authform.js"></script>
-    <script type="module" src="scripts/firebase.js"></script>
-    <script type="module" src="scripts/game.js"></script>
+    <script src="env.mjs" onerror="console.error('Failed to load env.js');"></script>
+    <script type="module" src="scripts/authform.js" onerror="console.error('Failed to load authform.js');"></script>
+    <script type="module" src="scripts/firebase.js" onerror="console.error('Failed to load firebase.js');"></script>
+    <script type="module" src="scripts/game.js" onerror="console.error('Failed to load game.js');"></script>
 </body>
 </html>
