--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KarokaGame</title>
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <title>Welcome to Karoka</title>
+    <!-- Tailwind CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body>
+<body class="min-h-screen bg-gradient-to-b from-gray-900 via-gray-800 to-black text-white flex flex-col items-center py-10 px-6">
+    <!-- Header -->
+    <header class="w-full max-w-4xl bg-gray-800/70 p-6 rounded-lg shadow-md flex justify-between items-center mb-8">
+        <p class="text-lg text-gray-300">
+            Hello, <span id="username" class="text-indigo-400">Guest</span>!
+        </p>
+        <button id="auth-button" class="px-4 py-2 bg-indigo-600 hover:bg-indigo-500 text-white font-semibold rounded-lg shadow-md transition">
+            Login / Sign Up
+        </button>
+    </header>
 
-    <!-- Game Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.0/dist/phaser.js"></script>
-    <script type="module" src="scripts/authform.js" onerror="console.error('Failed to load authform.js');"></script>
-    <script type="module" src="scripts/firebase.js" onerror="console.error('Failed to load firebase.js');"></script>
-    <script type="module" src="scripts/game.js" onerror="console.error('Failed to load game.js');"></script>
+    <!-- Welcome Section -->
+    <div class="text-center mb-12">
+        <h1 class="text-5xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-indigo-500 to-purple-500 mb-6">
+            Welcome to Karoka!
+        </h1>
+        <p class="text-lg text-gray-400">
+            Explore, compete, and sharpen your problem-solving skills.
+        </p>
+    </div>
+
+    <!-- Active Competition -->
+    <div class="w-full max-w-4xl bg-gray-800/70 p-6 rounded-lg shadow-md mb-8">
+        <h3 class="text-2xl font-semibold text-indigo-400 mb-4">Active Competition:</h3>
+        <p class="text-lg mb-4">Current Competition: <strong class="text-indigo-400">Winter Algorithm Challenge</strong></p>
+        <button id="game-button" class="px-6 py-2 bg-indigo-600 hover:bg-indigo-500 text-white font-semibold rounded-lg shadow-md transition">
+            Go to Game
+        </button>
+    </div>
+
+    <!-- Game Preview -->
+    <div id="game-container" class="hidden">
+        <h3 class="text-xl font-bold text-indigo-400 mb-4">Game Preview</h3>
+        <iframe id="game-preview" class="w-80 h-64 border-4 border-gray-700 rounded-lg shadow-md"></iframe>
+    </div>
+
+    <!-- Login Modal -->
+    <div id="login-modal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center"></div>
+
+    <!-- Scripts -->
+    <!-- Firebase and Game Integration -->
+    <script type="module" src="./game/scripts/authform.js" onerror="console.error('Failed to load authform.js');"></script>
+    <script type="module" src="./game/scripts/firebase.js" onerror="console.error('Failed to load firebase.js');"></script>
+    
 </body>
 </html>
