--- a/public/index.html
+++ b/public/index.html
@@ -47,9 +47,6 @@
     <div id="login-modal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex justify-center items-center"></div>
 
     <!-- Scripts -->
-    <!-- Firebase and Game Integration -->
-    <script type="module" src="./game/scripts/authform.js" onerror="console.error('Failed to load authform.js');"></script>
-    <script type="module" src="./game/scripts/firebase.js" onerror="console.error('Failed to load firebase.js');"></script>
-    
+    <script type="module" src="main.js"> </script>
 </body>
 </html>
