coomit before modifyign the profile

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
         </button>
     </div>
 
-    <button onclick="hideProfileContainer()">Profile</button>
+    <button id='profile-button'onclick="hideProfileContainer()">Profile</button>
 
     <div id="profile-container">
        
@@ -98,5 +98,6 @@
 
     <!-- Scripts -->
     <script type="module" src="main.js"></script>
+    <script type="module" src="profile.js"></script>
 </body>
 </html>
