Profile saved when log in

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
         <h2>Edit Profile</h2>
         <div class="input-group">
             <label for="username">Name</label>
-            <input type="text" id="kname" placeholder="Enter your name">
+            <input type="text" id="kname" >
         </div>
         <div class="input-group">
             <label for="fieldOfStudy">Field of Study</label>
@@ -69,6 +69,7 @@
             <button id ='cancel-profile' class="cancel-btn">Cancel</button>
         </div>
     </div>
+
 
 
 
@@ -98,6 +99,6 @@
 
     <!-- Scripts -->
     <script type="module" src="main.js"></script>
-    <script type="module" src="profile.js"></script>
+    
 </body>
 </html>
