--- a/public/game/game.html
+++ b/public/game/game.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Karoka</title>
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Karoka</title>
+  <link rel="stylesheet" href="styles/style.css" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
 <body>
-
-    <!-- Game Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.0/dist/phaser.js"></script>
-    <script type="module" src="scripts/game.js" onerror="console.error('Failed to load game.js');"></script>
+  <div id="game-container"></div>
+  <!-- Game Scripts -->
+  <canvas id="gameCanvas"></canvas>
+  <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.0/dist/phaser.js"></script>
+  <script type="module" src="scripts/game.js"></script>
 </body>
 </html>
