--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
             Hello, <span id="username" class="text-indigo-400 font-semibold">Guest</span>!
         </p>
         <button id='profile-button' class="px-3 py-2 bg-indigo-600 hover:bg-indigo-500 text-white font-semibold rounded-lg shadow-md transition" onclick="hideProfileContainer()">Profile</button>
+
+        <button id='feedback' class="px-3 py-2 bg-indigo-600 hover:bg-indigo-500 text-white font-semibold rounded-lg shadow-md transition" onclick="redirectFeedback()">Give feedback</button>
         <button id="auth-button" class="px-5 py-2 bg-indigo-600 hover:bg-indigo-500 text-white font-semibold rounded-lg shadow-md transition">
             Login / Sign Up
         </button>
