--- a/public/game/game.html
+++ b/public/game/game.html
@@ -12,7 +12,11 @@
   <!-- Game Scripts -->
   <canvas id="gameCanvas"></canvas>
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.0/dist/phaser.js"></script>
-  <script type="module" src="/game/scripts/game.js"></script>
+
+
+  <!--<script type="module" src="/game/scripts/game.js"></script>  -->
+   <!-- Game Scripts Local-->
+  <script type="module" src="scripts/game.js"></script>
 
 </body>
 </html>
