--- a/public/game/game.html
+++ b/public/game/game.html
@@ -16,7 +16,7 @@
 
    <!--<script type="module" src="/game/scripts/game.js"></script> -->
    <!-- Game Scripts Local-->
-  <script type="module" src="scripts/game.js"></script> 
+  <script type="module" src="../scripts/game.js"></script> 
 
 </body>
 </html>
