quiz added need to work on that

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,8 @@
   <div id="competition-container" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 px-6 max-w-6xl mx-auto"></div>
 
   <!-- Scripts -->
+  <script type="module" src="scripts/router.js"></script>
   <script type="module" src="main.js"></script>
+  
 </body>
 </html>
